--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="mobile-web-app-capable" content="yes">
   
   <link rel="manifest" href="./manifest.json">
-  <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2693/2693507.png">
+  <link rel="apple-touch-icon" href="./public/icons/icon-512.png">
   
-  <title>AI Task Master Pro</title>
+  <title>AI Task Manager Pro</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-4481364556222677" crossorigin="anonymous"></script>
 <script type="importmap">
