--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
   >
+
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="mobile-web-app-capable" content="yes">
@@ -16,7 +17,6 @@
 
   <title>AI Task Manager Pro</title>
 
-  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <script type="importmap">
@@ -38,7 +38,7 @@
   <div id="root"></div>
 
   <script>
-    // Polyfill for older Android WebViews that lack crypto.randomUUID
+    // Polyfill for older Android WebViews
     if (!window.crypto?.randomUUID) {
       window.crypto = window.crypto || {};
       window.crypto.randomUUID = function () {
